# rs-school-ml-project

./: .gitignore  README.md  mypy.ini  noxfile.py  pyproject.toml
.github/workflows/: python-app.yml
src/rs_ml_project/: model.py  pipeline.py  train.py
tests/: test_data.csv  test_train.py
