[tool.poetry]
name = "rs_ml_project"
version = "0.1.0"
description = "Homework 9"
authors = ["albert-bariev"]

[tool.poetry.scripts]
train = "rs_ml_project.train:train"

[tool.poetry.dependencies]
python = "^3.8"
argparse = "^1.1"
pandas = "^1.3.4"
sklearn = "^0.0"
scikit-learn = "^1.0.1"
mlflow = "^1.22.0"
numpy = "^1.22.3"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
mypy = "^0.910"
pytest = "^6.2.5"
flake8 = "^4.0.1"
nox = "^2022.1.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
